--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Rocket Team</title>
-  <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <title>Tunnel Snakes Movie Database</title>
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="dist/main.css">
 </head>
-<body>
-  <h1> Rocket Team Rules </h1>
+
+<!-- Nav bar starts here  -->
+<header role="banner">
+  <img id="logo-main" src="https://f4.bcbits.com/img/a3357501286_5.jpg" width="200" height="150" alt="Tunnel Snakes movie database">
+<nav id="navbar-primary" class="navbar navbar-default" role="navigation">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse" id="navbar-primary-collapse">
+      <ul class="nav navbar-nav nav-pills"">
+        <li class="active"><a href="#">Find movies</a></li>
+        <li><a href="#">Show Movies</a></li>
+        <li><a href="#">Login</a></li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+</header><
+
+<!-- Nav bar ends here  -->
+
+
+
+<!-- Here's where our Find Movies will show up  -->
+<div id="#findContainer" clas="container">
+  <form class="navbar-form navbar-left" role="search">
+    <div class="form-group">
+      <input type="text" class="form-control">
+    </div>
+    <button type="submit" id="searchButton" class="btn btn-default">Search</button>
+  </form>
+   <div class="row" id="findContainerRow">
+  </div>
+</div>
+
+<!-- Here's where our Show Movies will show up  -->
+<div id="#showContainer" class="container">
+  <h1> Your saved movies</h1>
+  <div class="row" id="showContainerRow">
+  </div>
+
+</div>
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="bower_components/jquery/dist/jquery.min.js"></script>
   <script src="dist/app.js"></script>
 </body>
