so many promises

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </div>
 
 <!-- Here's where our Show Movies will show up  -->
-  <div id="showContainer" class="container">
+  <div id="showContainer" class="container hidden">
     <h1> Your saved movies</h1>
     <div class="row" id="showContainerRow">
     </div>
