--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <!-- Here's where our Show Movies will show up  -->
   <div id="showContainer" class="container hidden">
     <h1> Your saved movies</h1>
-    <button type="button" class="btn btn-secondary active" id="unwatchedMoviesButton"> Un-Watched Movies</button>
+    <button type="button" class="btn btn-secondary" id="unwatchedMoviesButton"> Un-Watched Movies</button>
     <button type="button" class="btn btn-secondary" id="watchedMoviesButton"> Watched Movies</button>
     <div class="row" id="showUnwatchedRow"></div>
     <div class="row hidden" id="showContainerRow"></div>
@@ -56,7 +56,7 @@
       <option>4</option>
       <option>5</option>
     </select> <br>
-    <button type="button" class="btn btn-primary" id="submitEdit"> Save Changes </button>
+    <button type="button" class="btn btn-primary" id="submitEdit" data-editKey="" data-imdbid=""> Save Changes </button>
   </div>
 
 <script src="dist/app.js"></script>
